# small-data-engineering

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  settings.py  workspace.yaml
.github/workflows/: build.yml
scripts/: init_test_tables.sql
src/: assets.py  db.py  definitions.py  settings.py
src/assets/: definitions.py
src/jobs/: definitions.py
src/ops/: definitions.py
src/orchestrations/: pipeline.py
src/sources/: base.py  master.py  registry.py
src/sources/system_a/: inventory.py
src/sources/system_b/: sales.py
