[project]
name = "small-data-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.10.6",
    "dagster-webserver>=1.10.6",
    "duckdb>=1.2.1",
    "pendulum>=3.1.0",
    "polars>=1.25.2",
    "poldantic>=0.3.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.10.6",
    "pydantic-extra-types[pendulum]>=2.10.6",
    "pydantic-settings>=2.11.0",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.2",
    "streamlit>=1.43.2",
]
